finished Contact, fixed content to not be hidden by footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
     margin: 10px;
 }
 
-.link:hover {
+.link:hover, link:focus {
     color: #4aaaa5;
 }
 
@@ -79,6 +79,7 @@ body {
     background-color: white;
     margin:auto;
     margin-top: 120px;
+    margin-bottom: 100px;
     padding: 40px;
 }
 
@@ -111,7 +112,7 @@ p {
     line-height: 30px;
 }
 
-.footer{
+.footer {
     position: fixed;
     bottom:0;
     left: 0;
@@ -122,7 +123,7 @@ p {
     z-index: 10; 
 }
 
-.copyright{
+.copyright {
     position: absolute;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 15px;
@@ -162,7 +163,54 @@ p {
     z-index: 4;
 }
 
-.pfText:hover{
+.pfText:hover, .pfText:focus {
+    color: #4aaaa5;
+    background-color: rgb(223, 223, 223);
+}
+
+.contact {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    font-size: 18px;
+    text-anchor: initial; 
+    word-spacing: 5px;
+    line-height: 30px;
+}
+
+.inputBox {
+    width: 99%;
+    height: 25px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    font-size: 15px;
+    padding-left: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #cccccc;
+}
+
+textarea {
+    width: 99%;
+    height: 200px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    font-size: 15px;
+    padding-left: 8px;
+    padding-top: 6px;
+    border: 1px solid #cccccc;
+}
+
+.inputBtn {
+    margin-top: 15px;
+    width: 110px;
+    height: 35px;
+    border: 0;
+    color: white;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 15px;
+    background-color: #4aaaa5;
+}
+
+.inputBtn:hover, .inputBtn:focus {
     color: #4aaaa5;
     background-color: rgb(223, 223, 223);
 }
